@@ -35,7 +35,7 @@ Dist::Zilla::Plugin::Test::PodSpelling = 2.006001
 ;Dist::Zilla::Plugin::Test::Pod::LinkCheck = 0
 Dist::Zilla::Plugin::Test::Pod::No404s = 1.002
 Dist::Zilla::Plugin::Test::Kwalitee = 2.06
-Dist::Zilla::Plugin::MojibakeTests = 0
+Dist::Zilla::Plugin::MojibakeTests = 0.8
 Dist::Zilla::Plugin::Test::ReportPrereqs = 0.019
 Dist::Zilla::Plugin::Test::Portability = 0
 Dist::Zilla::Plugin::Test::CleanNamespaces = 0.006
@@ -169,7 +169,6 @@ Test::Mojibake = 0
 Test::Spelling = 0.19
 Pod::Wordlist = 1.09
 Test::MinimumVersion = 0
-Test::Mojibake = 0
 
 [Prereqs / author_tests]
 -phase = develop
