@@ -202,7 +202,7 @@ sub configure
         #[Test::Pod::LinkCheck]     many outstanding bugs
         [ 'Test::Pod::No404s'   => { ':version' => '1.002' } ],
         [ 'Test::Kwalitee'      => { ':version' => '2.06', filename => 'xt/author/kwalitee.t' } ],
-        'MojibakeTests',
+        [ 'MojibakeTests'       => { ':version' => '0.8' } ],
         [ 'Test::ReportPrereqs' => { ':version' => '0.019', verify_prereqs => 1,
             exists $removed{PodCoverageTests} ? () : ( include => [ 'Pod::Coverage' ] ),
           } ],
@@ -499,6 +499,7 @@ following F<dist.ini> (following the preamble), minus some optimizations:
     :version = 2.06
     filename = xt/author/kwalitee.t
     [MojibakeTests]
+    :version = 0.8
     [Test::ReportPrereqs]
     :version = 0.019
     verify_prereqs = 1
